Changes since version 1.2.0
---------------------------

- When unmarshaling a string sequence parameter, Ice was not clearing
  the vector before appending elements to it. This has been fixed.
  
- Fixed a rare connection deadlock, that could happen if lots of long
  messages are sent rapidly in parallel, using separate threads or
  AMI.

- Fixed a race condition that could lead to a deadlock if a thread
  tried to join with another thread from within the destructor of a
  servant or class.

- Added support for IcePack and Glacier on Windows platforms.
  The IcePack Registry, IcePack Node and Glacier Starter programs
  can optionally be installed as Windows services. See the Ice
  manual for more information.

- Added a new logger implementation that uses the Windows Event Log.
  To use it, set the Ice.UseEventLog property to a non-zero value.

- Three new icepackadmin commands:

  * server signal NAME SIGNAL

    Causes the IcePackNode to send a signal to a server. (Unix only)

  * server stdout NAME MESSAGE

    Writes MESSAGE on server's stdout.

  * server stderr NAME MESSAGE

    Writes MESSAGE on server's stderr.

- Two new IcePack.Node properties:

  * IcePack.Node.Output=<path>

    If set, the IcePack node will redirect the stdout and stderr 
    output of the started servers to files named <server>.out and 
    <server>.err in this directory. Otherwise, the started servers 
    share the stdout and stderr of the IcePack node.

  * IcePack.Node.RedirectErrToOut=<num>

    If <num> is set to a value larger than zero, the stderr of each
    started server is redirected to the server's stdout.

- Eliminated Glacier's dependency on the crypt library. It now
  uses an equivalent function from OpenSSL.

- Fixed a bug that could cause a crash if an application used
  Ice::Application and was interrupted by a signal, resulting
  in two calls to Communicator::destroy().

- Replaced interface Glacier::PasswordVerifier with
  Glacier::PermissionsVerifier, property