@@ -1,6 +1,8 @@
 Changes since version 1.2.0
 ---------------------------
 
+- IceUtil::Thread now calls srand() in each new thread (Windows only).
+
 - When unmarshaling a string sequence parameter, Ice was not clearing
   the vector before appending elements to it. This has been fixed.
   
